--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,29 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+# Eclipse
+.project
+.classpath
+
+# IntelliJ
+*.ipr
+*.iml
+*.iws
+.idea
+.datastore
+.settings
+
+# Mac
+.DS_Store
+
+# VS Code
+.history/
+.vscode/
+__debug_bin
+
+# direnv setup
+.envrc
+
+# VIM
+*.swp
