--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,43 +1,17 @@
-# Properties for app.kafka.consumer settings can be
-# defined in this section or a configuration section with
-# the same layout.
-app.kafka.consumer {
+app.kafka.streams {
 
-  # Consumer topic
-  input-topic-pattern = "sim.+"
-
-  # Poll interval (milliseconds)
-  poll-interval = 1000
-
-  # Properties defined by org.apache.kafka.clients.consumer.ConsumerConfig
-  # can be defined in this configuration section.
-  kafka-clients {
-    bootstrap.servers = "localhost:9092"
-    max.poll.interval.ms = 300000
-    enable.auto.commit = false
-    auto.offset.reset = earliest
-    group.id = "pio-proto-serializer"
-    key.deserializer = "org.apache.kafka.common.serialization.ByteArrayDeserializer"
-    value.deserializer = "org.apache.kafka.common.serialization.ByteArrayDeserializer"
-  }
-}
-
-# Properties for akka.kafka.producer can be
-# defined in this section or a configuration section with
-# the same layout.
-app.kafka.producer {
-
-  # Properties defined by org.apache.kafka.clients.producer.ProducerConfig
-  # can be defined in this configuration section.
-  kafka-clients {
-    bootstrap.servers = "localhost:9092"
-    acks = all
-    retries = 0
-    batch.size = 16384
-    linger.ms = 1
-    buffer.memory = 33554432
-    key.serializer = "io.confluent.kafka.serializers.protobuf.KafkaProtobufSerializer"
-    value.serializer = "io.confluent.kafka.serializers.protobuf.KafkaProtobufSerializer"
+    input-topic-pattern = "pio.+"
     schema.registry.url = "http://127.0.0.1:8081"
-  }
+
+    # Properties for KafkaStreams can be defined in this section
+    # See: https://docs.confluent.io/platform/current/streams/developer-guide/config-streams.html
+    # Note: unsupported properties will result in a WARN message
+    config {
+        application.id = "pio-proto-serializer"
+        client.id = "pio-proto-serializer-client"
+        bootstrap.servers = "localhost:9092"
+        auto.offset.reset = "earliest"
+        commit.interval.ms = 100000
+    }
+
 }
