--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 app.kafka.streams {
 
-    input-topic-pattern = "pio.+"
+    input-topic-pattern = "localnet.+"
     schema.registry.url = "http://127.0.0.1:8081"
 
     # Properties for KafkaStreams can be defined in this section
