extract topic prefix

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 app.kafka.streams {
 
-    input-topic-pattern = "localnet.+"
+    input-topic-prefix = "localnet"
+    input-topic-pattern = ${app.kafka.streams.input-topic-prefix}".+"
     schema.registry.url = "http://127.0.0.1:8081"
 
     # Properties for KafkaStreams can be defined in this section
